feat: Add DeviceDetails activity declaration to AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,9 @@
             android:name=".DeviceList"
             android:exported="false" />
         <activity
+            android:name=".DeviceDetails"
+            android:exported="false" />
+        <activity
             android:name=".DeviceSetting"
             android:exported="false" />
         <activity
